--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -1,7 +1,8 @@
-form.register input[type="text"]:focus,
-form.register input[type="password"]:focus,
-form.register textarea:focus,
-form.register select:focus { 
+form.val input[type="text"]:focus,
+form.val input[type="email"]:focus,
+form.val input[type="password"]:focus,
+form.val textarea:focus,
+form.val select:focus { 
     border-color: #44f97e;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #44f97e;
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #44f97e;
@@ -9,10 +10,11 @@ form.register select:focus {
     color: rgb(0,0,0);
 }
 
-form.register input[type="text"]:invalid:focus,
-form.register input[type="password"]:invalid:focus,
-form.register textarea:invalid:focus,
-form.register select:invalid:focus { 
+form.val input[type="text"]:invalid:focus,
+form.val input[type="email"]:focus,
+form.val input[type="password"]:invalid:focus,
+form.val textarea:invalid:focus,
+form.val select:invalid:focus { 
     border-color: #f4aa42;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #f4aa42;
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 8px #f4aa42;
