--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2181,7 +2181,7 @@ screen and (min-width: 75em) {
     border: 1px solid rgba(10, 10, 10, .25);
     border-radius: 0;
     position: relative;
-    background-color: #fff
+    background-color: #eff7fc;
 }
 .callout>:first-child {
     margin-top: 0
